--- a/server/liveblog/themes/themes_assets/default/less/embed.less
+++ b/server/liveblog/themes/themes_assets/default/less/embed.less
@@ -1023,7 +1023,6 @@ lb-producer__author:before {
   }
 
   .lb-post-actions > * {
-    width: 18px;
     display: inline-block;
     cursor: pointer;
   }
@@ -1051,8 +1050,14 @@ lb-producer__author:before {
 
   .lb-post-shareBox__item {
     display: inline-block;
-    width: 18px;
+    width: 24px;
     margin-right: 8px;
+  }
+
+  .lb-post-shareIcon,
+  .lb-post-linkIcon {
+    width: 24px;
+    height: 24px;
   }
 
   .lb-post-shareBox__item img {
@@ -1071,8 +1076,8 @@ lb-producer__author:before {
   /* pinned posts */
   .pin-drawer-button {
     position: absolute;
-    width: 23px;
-    height: 23px;
+    width: 24px;
+    height: 24px;
     border: 0;
     padding: 0;
     left: 50%;
@@ -1081,7 +1086,7 @@ lb-producer__author:before {
     z-index: 2;
     margin-top: -10px;
     line-height: 0;
-    border-radius: 23px;
+    border-radius: 24px;
     box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.3);
     transition: transform 0.5s;
   }
