Update embed's title color
LBSD-2916

--- a/server/liveblog/themes/themes_assets/default/less/embed.less
+++ b/server/liveblog/themes/themes_assets/default/less/embed.less
@@ -969,6 +969,7 @@ lb-producer__author:before {
   }
   .item--embed__title a {
     text-decoration: none;
+    color: #0066CC;
   }
   .item--embed__credit {
       text-align: right;
