Added dateModified, changed blockquote nested quote, added timezone offset for JSONLD

--- a/server/liveblog/themes/themes_assets/default/templates/template-item-quote.html
+++ b/server/liveblog/themes/themes_assets/default/templates/template-item-quote.html
@@ -1,8 +1,8 @@
 <div class="item--embed-quote">
     <blockquote>
         <p>{{ ref.item.meta.quote }}</p>
-        {% if ref.item.meta.credit %}
-            <h4>{{ ref.item.meta.credit }}</h4>
-        {% endif %}
     </blockquote>
+    {% if ref.item.meta.credit %}
+        <p class="quote-credit">{{ ref.item.meta.credit }}</p>
+    {% endif %}
 </div>
