--- a/server/liveblog/themes/themes_assets/default/less/tags.less
+++ b/server/liveblog/themes/themes_assets/default/less/tags.less
@@ -103,7 +103,7 @@ body.lb-wrapBody {
       font-style: italic;
   }
 
-  blockquote > h4 {
+  .quote-credit {
       font-family: "Georgia", "Times New Roman", serif;
       font-size: 1.2em;
       font-weight: normal;
@@ -115,7 +115,7 @@ body.lb-wrapBody {
       text-align: right;
   }
 
-  blockquote > h4:before {
+  .quote-credit:before {
       content: "\2014  ";
       margin-right: 4px;
   }
