Wrap consent in wrapper with min-height to reduce layout shifts
LBSD-2930

--- a/server/liveblog/themes/themes_assets/default/less/embed.less
+++ b/server/liveblog/themes/themes_assets/default/less/embed.less
@@ -975,6 +975,12 @@ lb-producer__author:before {
       text-align: right;
   }
 
+  // The intention of this wrapper is to reduce layout shifts because of the swapping effect
+  // when the consent placeholder is replaced by the actual embed.
+  .item--embed__consent-wrapper {
+      min-height: 350px;
+  }
+
   /* loading */
   .loading {
       color: @washedgreen;
